# Movie-Genre-Model

./: .dockerignore  .gitignore  .pre-commit-config.yml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  Text Classifier.ipynb  app.py  config.yaml  docker-compose.yml  environment.yml  model.py  pyproject.toml  top_movies.csv
.github/workflows/: cd.yml  ci.yml
app/: README.md  __init__.py  app.py  config.py  main.py  model_loader.py  run.py  schemas.py  services.py
app/static/: index.html  script.js  style.css
descriptions/: __init__.py  config.py  dataset.py  features.py  plots.py  preprocess.py
descriptions/modeling/: __init__.py  evaluate.py  mlflow_utils.py  model.py  predict.py  preprocess.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
examples/: pytorch_preprocessing_example.py
mlruns/0/: meta.yaml
mlruns/0/dff6fae4f737437f9a76912391cc6d8d/: meta.yaml
mlruns/0/e17ef4d90b594ac4a6b12292e2d1fb4c/: meta.yaml
mlruns/618534869413802208/: meta.yaml
mlruns/618534869413802208/38fb6200d24e44f9b44571e33e5e8eb7/: meta.yaml
mlruns/618534869413802208/7299ad2aa79747dba8672995a40c8814/: meta.yaml
mlruns/618534869413802208/72b3bb97c550425f865af99ad88500f0/: meta.yaml
mlruns/944344879077329120/: meta.yaml
mlruns/944344879077329120/195ad8eba0b94da4b417a55d6bc89bad/: meta.yaml
models/: genre_thresholds.json  linearsvc_parameters.json  logisticregression_parameters.json  metrics_linearsvc.json  metrics_logisticregression.json  metrics_sgdclassifier.json  per_label_thresholds.json  sgdclassifier_parameters.json
notebooks/: genre_tuneing.ipynb  metric_improvement.ipynb  model_testing.ipynb  overfitting_testing.ipynb  preprocessing_testing.ipynb  pytorch_NLP.ipynb  pytorch_model.ipynb  scripting.ipynb  threshold_tuning.ipynb
reports/: best_preprocessor_config.json  enhanced_features_results.csv  model_evaluation_report.md  preprocessor_tuning_results.csv  threshold_tuning_results.csv
tests/: conftest.py  test_api.py  test_data.py  test_edge_cases.py  test_model.py  test_predict.py  test_preprocess.py  test_services.py
(+24 files in other folders)
