[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "descriptions"
version = "0.0.1"
description = "We are going to use NLP models to see if we can predict the genres of a movie based on it description."
authors = [
  { name = "Christian Fullerton" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "python-dotenv>=1.2.1",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.0.0",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.1",
    "mlflow>=2.14.0",
    "joblib>=1.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.2.0",
    "pydantic-settings>=2.0.0",
]


[tool.ruff]
line-length = 99
src = ["descriptions"]
include = ["pyproject.toml", "descriptions/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["descriptions"]
force-sort-within-sections = true

